syntax = "proto3";

option csharp_namespace = "CleintGrpcLern";

package localRpc;

// The greeting service definition.
service LocalRpc {
  // Sends a greeting
  rpc GetLocalSignal (Request) returns (Response);
}

import "google/protobuf/wrappers.proto";
// The request message containing the user's name.
message Request {
  google.protobuf.Int32Value Signal = 1;
  string Desc = 2;
}

// The response message containing the greetings.
message Response {
  string OutMessage = 1;
  int32 ErrorId = 2;
}
